--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -23,7 +23,7 @@
       <div class="card kpi-card border-0 shadow-sm h-100">
         <div class="card-body p-4 d-flex align-items-center">
           <div class="icon-shape bg-primary bg-opacity-10 text-primary rounded-3 me-3">
-            <i class="bi bi-file-earmark-text-fill fs-4"></i>
+            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 1024 1024"><path fill="currentColor" d="M512 0C229.232 0 0 229.232 0 512c0 282.784 229.232 512 512 512c282.784 0 512-229.216 512-512C1024 229.232 794.784 0 512 0m0 961.008c-247.024 0-448-201.984-448-449.01c0-247.024 200.976-448 448-448s448 200.977 448 448s-200.976 449.01-448 449.01m204.336-636.352L415.935 626.944l-135.28-135.28c-12.496-12.496-32.752-12.496-45.264 0c-12.496 12.496-12.496 32.752 0 45.248l158.384 158.4c12.496 12.48 32.752 12.48 45.264 0c1.44-1.44 2.673-3.009 3.793-4.64l318.784-320.753c12.48-12.496 12.48-32.752 0-45.263c-12.512-12.496-32.768-12.496-45.28 0"/></svg>
           </div>
           <div>
             <p class="text-uppercase text-muted small fw-bold mb-1">Préstamos Activos</p>
@@ -37,7 +37,7 @@
       <div class="card kpi-card border-0 shadow-sm h-100">
         <div class="card-body p-4 d-flex align-items-center">
           <div class="icon-shape bg-warning bg-opacity-10 text-warning rounded-3 me-3">
-            <i class="bi bi-wallet2 fs-4"></i>
+           <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 20 20"><path fill="currentColor" d="M11.53 2.3A1.85 1.85 0 0 0 10 1.21A1.85 1.85 0 0 0 8.48 2.3L.36 16.36C-.48 17.81.21 19 1.88 19h16.24c1.67 0 2.36-1.19 1.52-2.64zM11 16H9v-2h2zm0-4H9V6h2z"/></svg>
           </div>
           <div>
             <p class="text-uppercase text-muted small fw-bold mb-1">Monto Pendiente</p>
@@ -51,7 +51,7 @@
       <div class="card kpi-card border-0 shadow-sm h-100">
         <div class="card-body p-4 d-flex align-items-center">
           <div class="icon-shape bg-success bg-opacity-10 text-success rounded-3 me-3">
-            <i class="bi bi-graph-up-arrow fs-4"></i>
+            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24"><defs><path id="IconifyId19b0960ab972ca86b1" d="M21.5 11v10h-19V11z"/></defs><g fill="none"><use href="#IconifyId19b0960ab972ca86b1"/><path d="M12 13.5a2.5 2.5 0 1 1 0 5a2.5 2.5 0 0 1 0-5m5.136-7.209L19 5.67l1.824 5.333H3.002L3 11.004L14.146 2.1z"/><path stroke="currentColor" stroke-linecap="square" stroke-width="2" d="M21 11.003h-.176L19.001 5.67L3.354 11.003L3 11m-.5.004H3L14.146 2.1l2.817 3.95"/><g stroke="currentColor" stroke-linecap="square" stroke-width="2"><path d="M14.5 16a2.5 2.5 0 1 1-5 0a2.5 2.5 0 0 1 5 0Z"/><use href="#IconifyId19b0960ab972ca86b1"/><path d="M2.5 11h2a2 2 0 0 1-2 2zm19 0h-2a2 2 0 0 0 2 2zm-19 10h2.002A2 2 0 0 0 2.5 18.998zm19 0h-2a2 2 0 0 1 2-2z"/></g></g></svg>
           </div>
           <div>
             <p class="text-uppercase text-muted small fw-bold mb-1">Ganancias Esperadas</p>
@@ -106,7 +106,7 @@
                     [ngClass]="{
                       'bg-success bg-opacity-10 text-withe': p.estado === 'Activo',
                       'bg-secondary bg-opacity-10 text-withe': p.estado === 'Terminado',
-                      'bg-danger bg-opacity-10 text-white': p.estado === 'Atrasado'
+                      'bg-primary bg-opacity-10 text-primary': p.estado === 'Pendiente'
                     }">
                     {{ p.estado }}
                   </span>
