--- a/src/app/pages/navbar/navbar.component.css
+++ b/src/app/pages/navbar/navbar.component.css
@@ -12,11 +12,10 @@
     transition: all 0.3s ease;
 }
 
+
+
 /* Icono del Logo */
-.icon-box {
-    width: 40px;
-    height: 40px;
-    box-shadow: 0 4px 6px rgba(13, 110, 253, 0.3); /* Sombra azul */
+.icon {
 }
 
 /* Links del Menú */
